objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Mail Chimp</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Connected on LinkedIn</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Demo Scheduled</fullName>
        </values>
        <values>
            <fullName>Follow up email- Next Steps</fullName>
        </values>
        <values>
            <fullName>Follow-up</fullName>
        </values>
        <values>
            <fullName>Get email and Phone Number</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Send email with case studies</fullName>
        </values>
        <values>
            <fullName>Set up intro call with team</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-20 employees</fullName>
                </value>
                <value>
                    <fullName>21-100 employees</fullName>
                </value>
                <value>
                    <fullName>101-500 employees</fullName>
                </value>
                <value>
                    <fullName>501-3500 employees</fullName>
                </value>
                <value>
                    <fullName>3501+ employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_First_Connect__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Enter the date of first connect to lead</inlineHelpText>
        <label>Date of First Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Connect__c</fullName>
        <defaultValue>today()+7</defaultValue>
        <label>Date of Second Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Third_Connect__c</fullName>
        <defaultValue>today()+14</defaultValue>
        <label>Date of Third Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dreamforce_Note__c</fullName>
        <label>Dreamforce Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FollowUp_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowUp_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Get_Regular_Updates_from_Mirketa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Regular Updates from Mirketa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hackathon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be used in Web-to-lead form for getting leads for Hackathon</description>
        <label>Hackathon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_address_Web_to_Lead__c</fullName>
        <label>IP address Web to Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Replied_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replied Recieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <inlineHelpText>1. Ready to buy now DM
2. Ready to buy now; Not DM
3. Interested in more information; DM
4	Interested in more information; Not DM
5	Not interested at this time; DM
6	Not interested at this time; Not DM</inlineHelpText>
        <label>Lead Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_id__c</fullName>
        <description>Valid lead sourc id is EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC</description>
        <inlineHelpText>Valid lead sourc id is 
EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC</inlineHelpText>
        <label>Lead Source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_source_section__c</fullName>
        <label>Lead source section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pitch_Used__c</fullName>
        <label>Pitch Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Link__c</fullName>
        <inlineHelpText>Enter the linkedin or Salesforce community Profile link.</inlineHelpText>
        <label>Profile Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matt Falkner</fullName>
                </value>
                <value>
                    <fullName>Sidharth Manchanda</fullName>
                </value>
                <value>
                    <fullName>Greg Lesko</fullName>
                </value>
                <value>
                    <fullName>Abhishek Gaur</fullName>
                    <isActive>false</isActive>
                    <label>Abhishek Gaur</label>
                </value>
                <value>
                    <fullName>Michele Tatum</fullName>
                    <isActive>false</isActive>
                    <label>Michele Tatum</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_Received__c</fullName>
        <label>If Reply Received (Remarks)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status_For_NewsLetter__c</fullName>
        <label>Status For NewsLetter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Assign_via_Round_Robin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used in creating Reports.</description>
        <label>Round Robin User</label>
        <referenceTo>rrde__Round_Robin_Users__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Do_not_Apply_Round_Robin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you do not want to apply round robin for this record.</description>
        <inlineHelpText>Check this box if you do not want to apply round robin for this record.</inlineHelpText>
        <label>Do not Apply Round Robin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__RRD_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box, if you want to run RRD assignment rule on  update.</description>
        <inlineHelpText>Check the box, if you want to run RRD assignment rule on  update.</inlineHelpText>
        <label>Re-Assign using RRD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Release_and_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box Re-assign and set old user on top in Team</description>
        <inlineHelpText>Check this box Re-assign and set old user on top in Team</inlineHelpText>
        <label>Release &amp; Re-Assign using RRD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_Assign_DateTime__c</fullName>
        <description>Round Robin Assign DateTime</description>
        <inlineHelpText>Round Robin Assign DateTime</inlineHelpText>
        <label>Round Robin Assign DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_Criteria__c</fullName>
        <description>Capture the info about the lead</description>
        <formula>rrde__Assign_via_Round_Robin__r.rrde__Team__r.rrde__Lead_Criteria__c</formula>
        <label>Round Robin Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Team_assigned_by_RRD__c</fullName>
        <description>Here we have the Team name of the RRDE user.</description>
        <formula>rrde__Assign_via_Round_Robin__r.rrde__Team__r.rrde__Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team assigned by RRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__User_assigned_by_RRD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capture the User on Lead when record is assigned by RRD</description>
        <inlineHelpText>Capture the User on Lead when record is assigned by RRD</inlineHelpText>
        <label>User assigned by RRD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Advitya_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>SFDC-IN|Advitya - The perfect duplicate management app,SFDC-DM|Advitya - The perfect duplicate management app</value>
        </filters>
        <label>Advitya Leads</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Jeff&apos;s Leads</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>David&apos;s Leads,Matt&apos;s Leads</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notContain</operation>
            <value>Package Installation,SFDC</value>
        </filters>
        <label>David&apos;s Inbound Leads</label>
    </listViews>
    <listViews>
        <fullName>All_addiction</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Jeff&apos;s Leads,Matt&apos;s Leads,Linkedin,Trade Show,Word of mouth,Mirketa.com Salesforce Addiction Treatment</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Matt&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>All_open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notContain</operation>
            <value>Mirketa,test,google,salesforce</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>gmail,mirketa,yahoo,hotmail,salesforce</value>
        </filters>
        <label>All open Leads</label>
    </listViews>
    <listViews>
        <fullName>David_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>David&apos;s Leads</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>David&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Dreamforce_2018_Michele_Tatum</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Dreamforce_Note__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>Rep_Name__c</columns>
        <columns>FollowUp_1__c</columns>
        <columns>FollowUp_2__c</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rep_Name__c</field>
            <operation>equals</operation>
            <value>Michele Tatum</value>
        </filters>
        <filters>
            <field>Rep_Name__c</field>
            <operation>equals</operation>
            <value>Abhishek Gaur</value>
        </filters>
        <label>Dreamforce 2018 Abhishek Gaur</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>RRD_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>RRD Leads</label>
    </listViews>
    <listViews>
        <fullName>Round_Robin_Queue_Lead</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Round Robin Distributor</value>
        </filters>
        <label>Round Robin Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce</fullName>
        <booleanFilter>(1 OR  2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>salesforce</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>salesforce</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>Salesforce</label>
    </listViews>
    <listViews>
        <fullName>This_Months_Leads</fullName>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Rep_Name__c</columns>
        <columns>FollowUp_1__c</columns>
        <columns>FollowUp_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>noah</value>
        </filters>
        <label>This Months Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_source_id_Check</fullName>
        <active>false</active>
        <errorConditionFormula>Lead_Source_id__c != &apos;EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC&apos;</errorConditionFormula>
        <errorMessage>Lead Source id is empty,possible spam</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remarks_is_required_if_is_reply_checked</fullName>
        <active>true</active>
        <description>Remarks is required if is reply checked.</description>
        <errorConditionFormula>Is_Replied_Recieved__c == true  &amp;&amp;  ISBLANK( Reply_Received__c )</errorConditionFormula>
        <errorDisplayField>Reply_Received__c</errorDisplayField>
        <errorMessage>Remarks is required if is reply checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spam_leads</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(LastName  , &apos;57f&apos;)  || CONTAINS(LastName  , &apos;58&apos;)</errorConditionFormula>
        <errorMessage>Spam lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__Can_only_check_only_one_Reassign_type</fullName>
        <active>true</active>
        <description>check either Release &amp; Re-Assign using RRD or Re-Assign using RRD</description>
        <errorConditionFormula>(rrde__RRD_Assignment_Rule__c == true  &amp;&amp; rrde__Release_and_Reassign__c == true)</errorConditionFormula>
        <errorMessage>Please check either Release &amp; Re-Assign using RRD or Re-Assign using RRD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__Cant_Run_RRD_on_Do_not_apply_RRD</fullName>
        <active>true</active>
        <description>If do not apply RRD box is checked , you can not check RRD assignment box</description>
        <errorConditionFormula>rrde__Do_not_Apply_Round_Robin__c  = true  &amp;&amp;  (rrde__RRD_Assignment_Rule__c == true  || rrde__Release_and_Reassign__c == true)</errorConditionFormula>
        <errorMessage>You can not re-assign this Lead using round robin if &apos;Do not apply round robin&apos; is checked.</errorMessage>
    </validationRules>
</CustomObject>